--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/paf31/purescript-canvas.git"
+    "url": "git@github.com:JorisM/purescript-canvas.git"
   },
   "dependencies": {
     "purescript-eff": "^0.1.0",
