--- a/bower.json
+++ b/bower.json
@@ -17,12 +17,13 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git@github.com:JorisM/purescript-canvas.git"
+    "url": "git://github.com/paf31/purescript-drawing.git"
   },
   "dependencies": {
     "purescript-eff": "^0.1.0",
     "purescript-functions": "^0.1.0",
     "purescript-maybe": "^0.3.0",
-    "purescript-exceptions": "^0.3.1"
+    "purescript-exceptions": "^0.3.1",
+    "purescript-halogen": "^0.5.9"
   }
 }
